# StellarSplit

./: .gitignore  README.md  package.json  tsconfig.json
.github/workflows/: ci.yml
backend/: .env.example  README.md  build_errors.txt  build_errors_v2.txt  build_errors_v4.txt  build_errors_v5.txt  build_errors_v6.txt  build_errors_v7.txt  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
backend/docs/: payment-system.md
backend/src/: app.module.ts  main.ts  test-setup.ts
backend/src/analytics/: analytics.module.ts  analytics.processor.ts
backend/src/audit-trail/: audit-report.json  audit.service.ts
backend/src/batch/: batch.module.ts
backend/src/common/: queue-job-policy.ts
backend/src/compliance/: compliance.module.ts  compliance.processor.ts  historical-rates.service.ts
backend/src/config/: app.config.ts  database.config.ts
backend/src/contracts/: route-contract.fixture.ts  route-regression.integration.spec.ts
backend/src/currency/: currency.service.ts
backend/src/database/: data-source.ts
contracts/: README.md
contracts/flash-loan/: Cargo.toml
contracts/multi-sig-splits/: Cargo.toml
contracts/path-payment/: Cargo.toml
contracts/split-escrow/: Cargo.toml  RECOVERY.md
contracts/split-escrow/src/: admin.rs  errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/staking/: Cargo.toml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
src/: app.module.ts
src/database/: typeorm.config.ts
test/: splits.e2e.spec.ts
(+162 files in other folders)
